# xnano

./: .codacy.yml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  mindmap.md  mkdocs.yml  pyproject.toml  test.py  zensical.toml
.github/: check_version.py  confirm_not_on_pypi.py  get_pinned_xnano_core_version.py  resolve_release_plan.py  wasm_smoke_test.py
.github/workflows/: ci.yml  commit-validation.yml  docs.yml
deprecated/: pyproject.toml
dev/: pyproject.toml
docs/: index copy.md  index.md  sandbox.md
docs/api/: _core_bindings.md  _demo.md  _dispatch.md  _event_processing.md  _function_hooks.md  _introspection.md  _renderable.md  _styles.md  _tailwind_classes.md  _types.md  _validation.md  color.md  context.md  cursor.md  device.md  effects.md  events.md  exceptions.md  fields.md  focus.md  frame.md  grid.md  hooks.md  index.md  keyboard.md  mouse.md  sizing.md  state.md  terminal.md  types.md
docs/architecture/: hosts-and-controllers.md  lifecycle.md  render-nodes.md  xnano-core.md
docs/assets/: .demo-assets-purged  luffy.xni  luffy_deck.xni
docs/beta/: overview.md
docs/cli/: index.md
docs/components/: chart.md  images.md  index.md  progress.md  schema.md  select.md  sparkline.md  table.md  text.md
docs/concepts/: actions.md  getting-started.md  grid.md  hooks.md  sizing.md  terminal.md
docs/core-concepts/: actions.md  cli.md  components.md  context.md  device.md  events.md  fields.md  getting-started.md  grids.md  styling.md  terminal.md  web.md
docs/hooks/: index.md  on-click.md  on-clipboard.md  on-event.md  on-field.md  on-focus.md  on-keyboard.md  on-mouse.md  on-poll.md  on-resize.md  on-state.md  on-tick.md  on.md
docs/includes/: interactive.md
docs/js/: code-lang.js  custom.js  hero.js  pyodide-ansi.js  showcase-hover.js
docs/llm-completions/: completions-with-structured-outputs.md
docs/overrides/: main.html
docs/sandbox/: chart.md  layout.md  progress.md  rendering.md  sparkline.md  styling.md  table.md  text.md
docs/stylesheets/: appearance.css  code-theme.css  components.css  context7.css  extras.css  hero.css  nav.css  showcase-hover.css  termynal.css  watercolor.css
docs/terminal/: cursor.md  device.md  index.md
docs/tutorials/: action-bindings.md  cli-commands.md  composed-text.md  confirm-dialog.md  custom-component.md  dual-host.md  grid-render.md  index.md  live-progress.md  live-sparklines.md  nested-panels.md  scrollable-log.md  selection-list.md  shared-state.md  streaming-content.md  table-browser.md  tabs.md  text-inputs.md  title-and-clipboard.md
docs/webui/: index.md  rendering.md  requests.md
docs/xnano/: getting-started.md
docs/xnano-core/: engine.md  native.md  overview.md
docs_extensions/: __init__.py  interactive.py
examples/: agent_chat.py  dashboard.py  effects_demo.py  feed.py  kanban.py  speed_benchmark.py  tabs_nav.py  web_counter.py
scripts/: check_concept_demos.py  check_import_policy.py  compress_assets.py  generate_api_docs.py  generate_component_demos.py  generate_concept_demos.py  generate_demo_gifs.py  generate_example_screenshots.py  generate_hook_demos.py  generate_readme_demos.py  generate_showcase_demos.py  generate_tailwind_literal.py  generate_terminal_demos.py  generate_tutorial_demos.py  generate_xnano_demos.py  precompute_demo_image.py  run_vhs_demo.py  run_xnano_spec.py  set_version.py  vhs_doc_themes.py  vhs_docs.py  vhs_recording.py  vhs_showcase_themes.py  vhs_tape.py
src/: lib.rs
src/bindings/: buffer.rs  convert_core.rs  fx.rs  layout.rs  palette.rs  terminal.rs  text.rs  widgets_extra.rs
tests/: conftest.py  helpers.py  test.py  test_actions.py  test_agents.py  test_autofocus.py  test_buffer.py  test_chart.py  test_color.py  test_completion.py  test_completion_batch_completions.py  test_completion_structured_outputs.py  test_completion_tool_use.py  test_component.py  test_component_chart.py  test_component_progress.py  test_component_schema.py  test_component_select.py  test_component_table.py  test_container_fields.py  test_convert.py  test_core.py  test_core_effects.py  test_core_engine_features.py  test_core_events.py  test_core_imports.py  test_core_render_content.py  test_core_render_node.py  test_core_terminal_integration.py  test_core_widgets.py  test_effects.py  test_events.py  test_exceptions.py  test_field_focus.py  test_frame.py  test_generative_model.py  test_generators.py  test_grid_field_hooks.py  test_grid_flex.py  test_grid_init.py  (+43 more)
tests/beta/: conftest.py  grids.py  test_actions.py  test_cli.py  test_commands.py  test_component_base.py  test_context.py  test_cursor_device.py  test_decoupling.py  test_demo.py  test_end_to_end.py  test_events.py  test_field_component_matrix.py  test_grids.py  test_hooks.py  test_imports.py  (+17 more)
xnano/: __init__.py  __main__.py  _cli.py  _convert.py  _core.py  _core.pyi  _core_bindings.py  _demo.py  _dispatch.py  _event_processing.py  _function_hooks.py  _introspection.py  _markup.py  _renderable.py  _repl.py  _styles.py  _tailwind_classes.py  _types.py  _validation.py  buffer.py  chart.py  color.py  component.py  console.py  context.py  cursor.py  device.py  effects.py  events.py  exceptions.py  fields.py  focus.py  frame.py  grid.py  hooks.py  images.py  keyboard.py  layout.py  main.py  models.py  (+13 more)
xnano-core/: Cargo.toml  LICENSE  README.md  pyproject.toml
xnano-core/.cargo/: config.toml
xnano-core/python/xnano_core/: __init__.py  _xnano_core.pyi  core.py
xnano-core/python/xnano_core/rust/: __init__.py  engine.py  engine.pyi  native.pyi
xnano-core/rust/src/: lib.rs
xnano-core/rust/src/bindings/: buffer.rs  command.rs  convert.rs  convert_core.rs  crossterm_exec.rs  crossterm_types.rs  cursor.rs  event_setup.rs  frame_ext.rs  fx.rs  layout.rs  mod.rs  palette.rs  style.rs  terminal.rs  terminal_device.rs  text.rs  widgets.rs  widgets_extra.rs
xnano-core/rust/src/bindings/engine/: clock.rs  content_bridge.rs  editor.rs  events.rs  key_binding.rs  mod.rs  panic_hook.rs  render_ir.rs  render_tree.rs  session.rs  session_stub.rs  terminal_reset.rs
(+462 files in other folders)
