[build-system]
requires = ["uv_build>=0.11.26,<0.12"]
build-backend = "uv_build"

[tool.uv]
managed = true

[tool.uv.build-backend]
module-root = ""
packae = true

[tool.uv.sources]
xnano-core = { workspace = true }

[tool.uv.workspace]
members = [
    "xnano-core"
]

[project]
name = "xnano"
version = "0.99.2"
authors = [{ name = "Hammad Saeed", email = "hammad@supportvectors.com" }]
description = "A simple python **tui** framework built on top of the ``[ratatui](https://ratatui.rs)`` and ``[tachyonfx](https://github.com/ratatui/tachyonfx)`` rust crates."
readme = "README.md"
license = {"file" = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "xnano-core>=0.0.1",
]

[dependency-groups]
dev = [
    "prek",
    "logfire",
    "black",
    # SORT!
    "isort",
    "ruff",
    "uv",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "twine>=6.1.0",
    # type checking!
    # another banger from astral.sh
    "ty",

    # all examples use marimo in favor of jupyter because marimo
    # is very good :)
    "marimo",

    # docs (zensical is a project by the mkdocs-material team, that
    # aims to be the successor to mkdocs-material and mkdocs itself)
    "zensical",
    "griffe-typingdoc",
    "mkdocs-material",
    "mkdocs-click",
    "mkdocstrings-python",
]

[tool.maturin.env]
PYO3_USE_ABI3_FORWARD_COMPATIBILITY = "1"

[tool.ty.environment]
extra-paths = ["xnano-core/python"]

[tool.ruff]
line-length = 79

[tool.ruff.format]
line-ending = "auto"

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint]
preview = true
select = [
    "E301",
    "E302",
    "E303",
    "E305",
]