[build-system]
requires = ["uv_build>=0.11.26,<0.12"]
build-backend = "uv_build"

[tool.uv]
managed = true

[tool.uv.build-backend]
module-root = ""
package = true

[tool.uv.sources]
xnano-core = { workspace = true }

[tool.uv.workspace]
members = [
    "xnano-core"
]

[project]
name = "xnano"
version = "1.0.0b4"
authors = [{ name = "Hammad Saeed", email = "hammad@supportvectors.com" }]
description = "A simple python **tui** framework built on top of the ``[ratatui](https://ratatui.rs)`` and ``[tachyonfx](https://github.com/ratatui/tachyonfx)`` rust crates."
readme = "README.md"
license = {"file" = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "pydantic-core>=2.0.0",
    "xnano-core==0.0.7",
]

[project.scripts]
xnano = "xnano.__main__:main"

[dependency-groups]
dev = [
    "maturin>=1.9.4,<2.0",
    "prek",
    "logfire",
    "black",
    # SORT!
    "isort",
    "ruff",
    "uv",
    "pytest",
    "pytest-asyncio",
    "pytest-benchmark>=5.1.0",
    "pytest-cov",
    "twine>=6.1.0",
    # type checking!
    # another banger from astral.sh
    "ty",
    # all examples use marimo in favor of jupyter because marimo
    # is very good :)
    "marimo",
    # docs (zensical is a project by the mkdocs-material team, that
    # aims to be the successor to mkdocs-material and mkdocs itself)
    "zensical",
    "termynal>=0.14.0",
    "griffe-typingdoc",
    "mkdocs-material",
    "mkdocs-click",
    "mkdocstrings-python",
    # basemodel testing
    "pydantic>=2.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["tests"]

[tool.maturin.env]
PYO3_USE_ABI3_FORWARD_COMPATIBILITY = "1"

[tool.ty.environment]
extra-paths = ["xnano-core/python"]

[tool.ruff]
line-length = 79

[tool.ruff.format]
line-ending = "auto"

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint]
preview = true
select = [
    "E301",
    "E302",
    "E303",
    "E305",
]
