[build-system]
requires = ["uv_build>=0.11.26,<0.12"]
build-backend = "uv_build"

[tool.uv]
managed = true

[tool.uv.build-backend]
module-root = ""
package = true
source-exclude = ["/xnano/*.xni"]
wheel-exclude = ["/xnano/*.xni"]

[tool.uv.sources]
xnano-core = { workspace = true }

[tool.uv.workspace]
members = [
    "xnano-core"
]

[project]
name = "xnano"
version = "1.0.17"
authors = [{ name = "Hammad Saeed", email = "hammad@supportvectors.com" }]
description = "A simple python **tui** framework built on top of the ``[ratatui](https://ratatui.rs)`` and ``[tachyonfx](https://github.com/ratatui/tachyonfx)`` rust crates."
readme = "README.md"
license = {"file" = "LICENSE"}
requires-python = ">=3.10,<3.14"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "markdown-it-py>=3.0.0",
    "pydantic-core>=2.0.0",
    "pygments>=2.17.0",
    "xnano-core==0.0.12",
]

[project.optional-dependencies]
images = [
    "pillow>=11.0.0",
]
requests = [
    "starlette>=1.3.1",
    "uvicorn>=0.30.0",
]

[project.scripts]
xnano = "xnano.__main__:run_demo"

[dependency-groups]
dev = [
    "maturin>=1.9.4,<2.0",
    "prek",
    "logfire",
    "black",
    # SORT!
    "isort",
    "ruff",
    "uv",
    "pytest",
    "pytest-asyncio",
    "pytest-benchmark>=5.1.0",
    "pytest-cov",
    "twine>=6.1.0",
    # type checking!
    # another banger from astral.sh
    "ty",
    # all examples use marimo in favor of jupyter because marimo
    # is very good :)
    "marimo",
    # docs (zensical is a project by the mkdocs-material team, that
    # aims to be the successor to mkdocs-material and mkdocs itself)
    "zensical>=0.0.50",
    "termynal>=0.14.0",
    "griffe-typingdoc",
    "mkdocs-material",
    "mkdocs-click",
    "mkdocstrings-python",
    "markdown-exec[ansi]",

    # test / beta testing related dependencies
    "pydantic>=2.0.0",
    "httpx>=0.28.1",
]

[tool.pytest.ini_options]
pythonpath = ["tests"]
# Skip experimental suites during default discovery.
# Run explicitly: uv run pytest tests/beta tests/experimental
norecursedirs = [
    ".*",
    "build",
    "dist",
    "CVS",
    "_darcs",
    "{arch}",
    "*.egg",
    "venv",
    "beta",
    "experimental",
]

[tool.maturin.env]
PYO3_USE_ABI3_FORWARD_COMPATIBILITY = "1"

[tool.ty.environment]
extra-paths = ["xnano-core/python"]

[tool.ruff]
line-length = 79

[tool.ruff.format]
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["xnano"]
known-third-party = ["pydantic_core", "xnano_core"]
# Automatic spacing (-1):
# - 1 blank line between the last runtime import and `if TYPE_CHECKING:`
# - 2 blank lines after the import / TYPE_CHECKING block before top-level
#   content (class / function / assignment)
# Forced `2` incorrectly puts two blanks *before* TYPE_CHECKING as well.
lines-after-imports = -1
no-lines-before = ["local-folder"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint]
preview = true
select = [
    "E301",
    "E302",
    "E303",
    "E305",
    "F401",
    "I",
    "TID252",
]
