[package]
name = "xnano-core"
version = "0.0.7"
edition = "2024"
license = "MIT"
homepage = "https://github.com/hsaeed3/xnano"
repository = "https://github.com/hsaeed3/xnano.git"
readme = "README.md"
include = [
    "/pyproject.toml",
    "/README.md",
    "/LICENSE",
    "/build.rs",
    "/.cargo",
    "/rust/src",
    "/python/xnano_core",
    "!__pycache__",
    "!*.so",
]
rust-version = "1.88"

[lib]
name = "xnano_core"
crate-type = ["cdylib", "rlib"]
path = "rust/src/lib.rs"

[dependencies]
crossterm = "0.28"
palette = "0.7"
pyo3 = { version = "0.29.0", features = [
    "extension-module",
    "abi3-py310",
    "generate-import-lib",
] }
ratatui = { version = "0.29", features = ["palette", "underline-color"] }
ratatui-core = "0.1"
tachyonfx = "0.25"
lru = "0.16.3"

[build-dependencies]
pyo3-build-config = "0.29.0"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true

[profile.bench]
debug = true
strip = false

[package.metadata.maturin]
name = "xnano_core"
python-source = "python"
