[package]
name = "xnano-core"
version = "0.0.12"
edition = "2024"
license = "MIT"
homepage = "https://github.com/hsaeed3/xnano"
repository = "https://github.com/hsaeed3/xnano.git"
readme = "README.md"
include = [
    "/pyproject.toml",
    "/README.md",
    "/LICENSE",
    "/build.rs",
    "/.cargo",
    "/rust/src",
    "/python/xnano_core",
    "!__pycache__",
    "!*.so",
]
rust-version = "1.88"

[lib]
name = "xnano_core"
crate-type = ["cdylib", "rlib"]
path = "rust/src/lib.rs"

[features]
# The crossterm-backed live terminal engine. Emscripten (Pyodide/WebAssembly)
# wheels build with --no-default-features because crossterm's event
# machinery cannot compile to wasm (mio has no WebAssembly support).
#
# Without this feature the package still ships the full layout/render
# engine (CoreRenderNode, CoreRenderIR, Constraint/Layout, Buffer,
# widgets) plus a buffer-backed CoreSession.offscreen() path for
# single-frame rendering. Only live DefaultTerminal / event I/O is
# unavailable — CoreSession.supports_live_terminal() returns False.
default = ["terminal", "editor"]
# ratatui/underline-color also lives here because it enables
# dep:crossterm inside ratatui.
terminal = [
    "dep:crossterm",
    "ratatui/crossterm",
    "ratatui/underline-color",
]
# Native multi-line text editing (CoreTextEditor). Backend-free build of
# tui-textarea: key events convert from PyKeyEvent inside the crate, so
# this feature compiles without "terminal" (wasm-safe).
editor = ["dep:tui-textarea"]

[dependencies]
crossterm = { version = "0.28", optional = true }
palette = "0.7"
pyo3 = { version = "0.29.0", features = [
    "extension-module",
    "abi3-py310",
    "generate-import-lib",
] }
ratatui = { version = "0.29", default-features = false, features = [
    "palette",
] }
ratatui-core = "0.1"
tachyonfx = "0.25"
tui-textarea = { version = "0.7", default-features = false, features = [
    "no-backend",
], optional = true }

[build-dependencies]
pyo3-build-config = "0.29.0"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true

[profile.bench]
debug = true
strip = false

[package.metadata.maturin]
name = "xnano_core"
python-source = "python"
