[build-system]
requires = ["maturin>=1.9.4,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "xnano_core.rust.native"
python-source = "python/"
bindings = "pyo3"
strip = true
package = true

[project]
name = "xnano-core"
dynamic = ["version", "readme"]
authors = [{ name = "Hammad Saeed", email = "hammad@supportvectors.com" }]
description = "Core Rust bindings for the xnano TUI framework."
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Rust",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/hsaeed3/xnano"
Source = "https://github.com/hsaeed3/xnano"
Documentation = "https://xnano.dev"

[dependency-groups]
dev = [
    "maturin>=1.9.4,<2.0",
    "prek",
    "logfire",
    "black",
    # SORT!
    "isort",
    "ruff",
    "uv",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "twine>=6.1.0",
    # type checking!
    # another banger from astral.sh
    "ty",

    # all examples use marimo in favor of jupyter because marimo
    # is very good :)
    "marimo",

    # docs (zensical is a project by the mkdocs-material team, that
    # aims to be the successor to mkdocs-material and mkdocs itself)
    "zensical",
    "griffe-typingdoc",
    "mkdocs-material",
    "mkdocs-click",
    "mkdocstrings-python",
]
benchmark = [
    "textual",
    "pytermgui",
    "urwid",
    "psutil",
]

[tool.maturin.env]
PYO3_USE_ABI3_FORWARD_COMPATIBILITY = "1"
MACOSX_DEPLOYMENT_TARGET = "11.0"

[tool.uv]
package = true

[tool.ty.environment]
extra-paths = ["python"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 79

[tool.ruff.format]
line-ending = "auto"

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint]
preview = true
select = [
    "E301",
    "E302",
    "E303",
    "E305",
]
